--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./bower_components/angular/angular.min.js"></script>
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="./bower_components/angular-resource/angular-resource.min.js"></script>
 
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="./bower_components/cfp-angular-hotkeys/build/hotkeys.min.js"></script>
@@ -38,6 +39,7 @@
 
     <script src="./public/app/app.js"></script>
     <script src="./public/app/routes/routes.js"></script>
+    <script src="./public/app/services/app.services.js"></script>
     <script src="./public/app/controllers/app.controller.js"></script>
 </body>
 <style>
