--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./bower_components/angular/angular.min.js"></script>
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="./bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="./bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="./bower_components/cfp-angular-hotkeys/build/hotkeys.min.js"></script>
